# xmltovcf

./: .gitignore  README.md  contacttagfreq  dumpxmltags  ppxml  pyproject.toml  xmltovcf
contacts/: __init__.py
